Happy new year 🥂🥳

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_svg: ^1.1.6
   flutter_form_builder: ^7.7.0
   form_builder_validators: ^8.4.0
+  email_validator: ^2.1.17
 dev_dependencies:
   flutter_test:
     sdk: flutter
